Внесены изменения в способ сохранения комментария на титульном листе отчёта.

--- a/Спецификация/Замечания.ini
+++ b/Спецификация/Замечания.ini
@@ -1,7 +1,7 @@
 [Main]
-PrintRptyTitle=0
+PrintRptyTitle=1
 PrintTT=0
-ZPrint=0
+ZPrint=1
 ZTPPrint=1
 PrintTP=1
 cbAllDates=1
@@ -29,3 +29,8 @@ Item07=0
 Item08=0
 Item09=0
 Item10=0
+[Comment]
+Items0=Многострочный
+Items1=комментарий
+Items2=на титульный лист
+Count=3
